# rCanary

./: .gitignore  CMakeLists.txt  Cargo.toml  Constraints.md  Patterns.md  README.md  install_rlc.sh  rust-toolchain.toml
PoC/Owned Pointer - loss of dropping owned raw pointer/: op.rs
PoC/OwnedInstance/: oi.dot  oi.rs
PoC/OwnedReference/: or.rs
PoC/Proxy-Type - loss of implementing drop function/: imdrop.rs
phase_llvm/: main.cpp  test.cpp  test.h
phase_llvm/cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake  rlc_phase_llvm.cbp
src/: analysis.rs  context.rs  display.rs  fs.rs  lib.rs  log.rs  type_collector.rs  type_discernment.rs
src/analysis/: flow_analysis.rs  type_analysis.rs
src/analysis/flow_analysis/: intro_visitor.rs  order.rs  ownership.rs  solver.rs
src/analysis/type_analysis/: backward.rs  connect.rs  init.rs  ownership.rs  solver.rs  type_visitor.rs  visitor.rs
src/components/: context.rs  display.rs  fs.rs  grain.rs  log.rs
src/type_discernment/: init.rs  solver.rs  visitor.rs
