[package]
name = "rlc"
version = "0.1.0"
edition = "2018"
authors = ["Moran Tsui <mhcui20@fudan.edu.cn>"]
default-run = "rlc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rlc"

[[bin]]
name = "cargo-rlc"

[lib]
name = "rlc"

[dependencies]
rustc_version = "0.4.0"
cargo_metadata = "0.14.0"
smallvec = "1.6.0"
snafu = "0.6"
chrono = "0.4.19"
serde_json = "1.0.68"
log = "0.4.14"
fern = "0.6.0"
wait-timeout = "0.2.0"
walkdir = "2.3.2"
rustc-demangle = "0.1.21"

[features]
backtraces = ["snafu/backtraces", "snafu/backtraces-impl-backtrace-crate"]