[package]
name = "rlc"
version = "0.1.0"
edition = "2018"
authors = ["Moran Tsui <mhcui20@fudan.edu.cn>"]
default-run = "rlc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rlc"

[[bin]]
name = "cargo-rlc"

[lib]
name = "rlc"

[dependencies]
rustc_version = "0.4.0"
cargo_metadata = "0.14.1"
smallvec = "1.7.0"
snafu = "0.6.10"
chrono = "0.4.19"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.72"
z3 = {version="0.11.2", features = ["static-link-z3"]}
z3-sys = "0.7.1"
log = "0.4.14"
fern = "0.6.0"
wait-timeout = "0.2.0"
walkdir = "2.3.2"
rustc-demangle = "0.1.21"
colorful = "0.2.1"

[features]
backtraces = ["snafu/backtraces", "snafu/backtraces-impl-backtrace-crate"]